# sumo-rl-loerrach-public

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.py
data/sumo_config/: demo_gui_settings.xml  loerrach.add.xml  loerrach.edg.xml  loerrach.net.xml  loerrach.nod.xml  loerrach.rou.xml  loerrach.sumocfg  loerrach_corridor.edg.xml  loerrach_corridor.nod.xml  loerrach_corridor.sumocfg  loerrach_corridor_high.rou.xml  loerrach_corridor_low.rou.xml  loerrach_corridor_medium.rou.xml  loerrach_high.rou.xml  loerrach_low.rou.xml  loerrach_medium.rou.xml  loerrach_osm.net.xml  loerrach_osm.sumocfg  loerrach_osm_high.rou.xml  loerrach_osm_low.rou.xml  loerrach_osm_medium.rou.xml  loerrach_real.edg.xml  loerrach_real.net.xml  loerrach_real.nod.xml  loerrach_real.sumocfg  loerrach_real_high.rou.xml  loerrach_real_low.rou.xml  loerrach_real_medium.rou.xml
docs/documentation/: 00_executive_summary.md  00b_verzeichnisse.md  01_introduction.md  02_related_work.md  03_data_and_environment.md  04_methodology.md  (+6 more)
results/: OSM_NETWORK_RESULTS.md  REAL_NETWORK_RESULTS.md
scripts/: analyze_phases_osm.py  analyze_signal_plan.py  audit_results.py  build_corridor_net.sh  compare_baseline_agent.py  evaluate_checkpoints.py  generate_demand_plots.py  generate_plots.py  generate_report.py  init_data.py  init_data_osm.py  init_data_real.py  monitor_training.py  render_demo.py  run_training.sh  setup.sh  setup_linux_training.sh
tests/: test_config.py  test_rewards.py  test_seeding.py
(+77 files in other folders)
