[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sumo-rl-loerrach"
version = "0.1.0"
description = "RL-based traffic light optimization for Loerrach, Germany"
authors = [{name = "Fabian Egenberger"}]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
